objects/vlocity_ins__ProviderNetworkMember__c.object
<CustomObject>
    <description>Identifies an organization or an individual service provider such as hospital, physician or any other provider who agreed to provide its services for an insurance company network . Master-detail child object of a Provider Network.</description>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsNetworkPreferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Network Members</relationshipLabel>
        <relationshipName>ProviderNetworkMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provider Network Members</relationshipLabel>
        <relationshipName>ProviderNetworkMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
        <label>Provider Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipLabel>Provider Network Members</relationshipLabel>
        <relationshipName>ProviderNetworkMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkTierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Network Tier</label>
        <referenceTo>vlocity_ins__ProviderNetworkTier__c</referenceTo>
        <relationshipLabel>Provider Network Tiers</relationshipLabel>
        <relationshipName>ProviderNetworkTiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <label>Needs More Review</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                    <label>Ready for Final Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Provider Network Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Network Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>